--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "openplugin"
-version = "0.0.1"
+version = "0.0.10"
 description = ""
 authors = ["shrikant <shrikant.pm14@gmail.com>"]
 readme = "README.md"
@@ -14,8 +14,12 @@ fastapi = "^0.95.2"
 load-dotenv = "^0.1.0"
 openai = "^0.27.7"
 pydantic = "^1.0.0"
+typer = { extras = ["all"], version = "^0.9.0" }
 
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+openplugin = "openplugin.main:app"
