--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,14 @@ pydantic = "^1.0.0"
 typer = { extras = ["all"], version = "^0.9.0" }
 
 
+[tool.poetry.group.docs.dependencies]
+nbsphinx = "^0.9.2"
+sphinx-autobuild = "^2021.3.14"
+sphinx = "6.2.1"
+sphinx-book-theme = "^1.0.1"
+toml = "^0.10.2"
+sphinx-copybutton = "^0.5.2"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
