--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ sphinx = "6.2.1"
 sphinx-book-theme = "^1.0.1"
 toml = "^0.10.2"
 sphinx-copybutton = "^0.5.2"
+sphinx-tabs = "^3.4.1"
 
 [build-system]
 requires = ["poetry-core"]
