--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,9 +26,16 @@ toml = "^0.10.2"
 sphinx-copybutton = "^0.5.2"
 sphinx-tabs = "^3.4.1"
 
+
+[tool.poetry.group.test.dependencies]
+poethepoet = "^0.21.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
 
 [tool.poetry.scripts]
 openplugin = "openplugin.main:app"
+
+[tool.poe.tasks]
+build_docs = "sphinx-build docs/source _build"
