--- a/.github/workflows/doc_publish.yml
+++ b/.github/workflows/doc_publish.yml
@@ -25,6 +25,8 @@ jobs:
         shell: bash
         run: |
           poetry run sphinx-build docs/source _build
+      - name: Create CNAME File
+        run: echo "openplugin.org" > _build/CNAME
       - name: Publish Docs
         uses: peaceiris/actions-gh-pages@v3
         with:
