--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -2,7 +2,8 @@ name: release
 on: [workflow_dispatch]
 env:
   POETRY_VERSION: "1.5.0"
-
+permissions:
+    contents: write
 jobs:
   if_release:
     runs-on: ubuntu-latest
