--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ load-dotenv = "^0.1.0"
 openai = "^0.27.7"
 pydantic = "^1.0.0"
 typer = { extras = ["all"], version = "^0.9.0" }
+websockets = "^11.0.3"
 
 
 [tool.poetry.group.docs.dependencies]
