--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ pytest-cov = "^4.1.0"
 [tool.poetry.group.types.dependencies]
 types-toml = "^0.10.8.7"
 types-requests = "^2.31.0.6"
+types-pyyaml = "^6.0.12.12"
 
 
 [tool.ruff]
@@ -55,9 +56,8 @@ fixable = ["ALL"]
 line-length = 88
 
 [tool.mypy]
-disallow_untyped_defs = "True"
+disallow_untyped_defs = "False"
 ignore_missing_imports = "True"
-warn_unused_ignores = "False"
 
 
 [tool.coverage.run]
