--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "openplugin"
-version = "0.0.24"
+version = "0.0.25"
 description = ""
 authors = ["shrikant <shrikant.pm14@gmail.com>"]
 readme = "README.md"
@@ -16,6 +16,7 @@ openai = "^0.27.7"
 pydantic = "^1.0.0"
 typer = { extras = ["all"], version = "^0.9.0" }
 websockets = "^11.0.3"
+litellm = "^0.7.10"
 
 
 [tool.poetry.group.docs.dependencies]
