--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ google-cloud-aiplatform = "1.35.0"
 boto3 = "^1.29.3"
 loguru = "^0.7.2"
 pydub = "^0.25.1"
+azure-cognitiveservices-speech = "1.35.0"
 
 
 [tool.poetry.group.docs.dependencies]
