--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,10 +10,10 @@ python = "^3.9"
 langchain = "0.1.7"
 requests = "2.31.0"
 uvicorn = "^0.22.0"
-fastapi = "^0.95.2"
+fastapi = "0.109.2"
 load-dotenv = "^0.1.0"
 openai = "1.12.0"
-pydantic = "1.10.14"
+pydantic = "2.6.1"
 typer = { extras = ["all"], version = "^0.9.0" }
 websockets = "^11.0.3"
 litellm = "1.23.14"
@@ -22,6 +22,7 @@ boto3 = "^1.29.3"
 loguru = "^0.7.2"
 pydub = "^0.25.1"
 azure-cognitiveservices-speech = "1.35.0"
+pydantic-settings = "^2.2.1"
 
 
 [tool.poetry.group.docs.dependencies]
