--- a/Dockerfile.lambda
+++ b/Dockerfile.lambda
@@ -1,4 +1,4 @@
-FROM python:3.9
+FROM public.ecr.aws/lambda/python:3.11
 
 # Create app directory
 WORKDIR /usr/app
@@ -9,10 +9,13 @@ COPY poetry.lock ./
 RUN pip install poetry
 RUN poetry export -f requirements.txt --output requirements.txt --without-hashes
 RUN pip install -r requirements.txt
-
-# Bundle app source code
-COPY . .
+RUN pip install mangum==0.17.0
 
 EXPOSE 8181
 
-CMD ["uvicorn", "openplugin.api.application:app", "--host", "0.0.0.0", "--port", "8181"]
+# Copy all files in ./src
+COPY scripts/lambda_handler.py ${LAMBDA_TASK_ROOT}
+COPY openplugin ${LAMBDA_TASK_ROOT}/openplugin
+
+# Set the CMD to your handler.
+CMD [ "lambda_handler.handler" ]
