--- a/.github/workflows/ecr.yml
+++ b/.github/workflows/ecr.yml
@@ -1,7 +1,5 @@
 name: Build and Push Openplugin Image to ECR
-on:
-  push:
-    branches: [ main ]
+on: [workflow_dispatch]
 jobs:
   build-and-push:
     name: Build and Push to ECR
