--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,6 @@ pydantic = "2.6.1"
 typer = { extras = ["all"], version = "^0.9.0" }
 websockets = "^11.0.3"
 litellm = "1.23.14"
-google-cloud-aiplatform = "1.35.0"
 boto3 = "^1.29.3"
 loguru = "^0.7.2"
 pydub = "^0.25.1"
@@ -27,6 +26,10 @@ toml = "^0.10.2"
 langchain-openai = "^0.0.8"
 langchain-mistralai = "^0.0.5"
 langchain-fireworks = "^0.1.1"
+langchain-anthropic = "^0.1.11"
+langchain-google-vertexai = "^1.0.2"
+langchain-cohere = "^0.1.4"
+langchain-groq = "^0.1.3"
 
 
 [tool.poetry.group.docs.dependencies]
