--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ langchain-anthropic = "^0.1.11"
 langchain-google-vertexai = "^1.0.2"
 langchain-cohere = "^0.1.4"
 langchain-groq = "^0.1.3"
+openapi3-parser = "^1.1.17"
 
 
 [tool.poetry.group.docs.dependencies]
