--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,6 +31,7 @@ langchain-google-vertexai = "^1.0.2"
 langchain-cohere = "^0.1.4"
 langchain-groq = "^0.1.3"
 openapi3-parser = "^1.1.17"
+jsonref = "^1.1.0"
 
 
 [tool.poetry.group.docs.dependencies]
@@ -52,6 +53,8 @@ poethepoet = "^0.24.0"
 black = "^23.9.1"
 ruff = "^0.0.291"
 pytest-cov = "^4.1.0"
+pytest-html = "^4.1.1"
+py = "^1.11.0"
 
 
 [tool.poetry.group.types.dependencies]
