--- a/pyproject.toml
+++ b/pyproject.toml
@@ -32,6 +32,7 @@ langchain-cohere = "^0.1.4"
 langchain-groq = "^0.1.3"
 openapi3-parser = "^1.1.17"
 jsonref = "^1.1.0"
+jsonpath-ng = "^1.6.1"
 
 
 [tool.poetry.group.docs.dependencies]
