--- a/stainless.yaml
+++ b/stainless.yaml
@@ -9,6 +9,15 @@ resources:
     methods:
       list: get /api/
     subresources:
+      plugin_selectors:
+        methods:
+          create: post /api/plugin-selector
+      operation_signature_builders:
+        methods:
+          create: post /api/operation-signature-builder
+      operation_executions:
+        methods:
+          create: post /api/operation-execution
       info:
         methods:
           retrieve: get /api/info
